[package]
name = "nova-maci"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nova-scotia = { git = "https://github.com/chaosma/Nova-Scotia", branch = "feature/curve-grumpkin" }
nova-snark = { git = "https://github.com/chaosma/Nova", branch = "feature/bn256-grumpkin" }
ff = { version = "0.13.0", features = ["derive"]}
serde = "1.0"
serde_json = "1.0.85"

